# dotxmonad

./: .Xmodmap  .gitignore  .xinitrc  .zshrc  greenclip.toml  logid.cfg  pavucontrol.ini
alacritty/: alacritty.toml  alacritty.yml
deadd/: deadd.yml
flameshot/: flameshot.ini
polybar/: bars.ini  config.ini  launch.sh  modules.ini  old-modules.ini
scripts/: cycle-keyboard-layout
tmux/: aio.sh  tmux.conf
xmonad/: build  my-xmonad.cabal  stack.yaml
xmonad/dist-newstyle/cache/: config
xmonad/lib/: xmonad.hs
