name:                my-xmonad
version:             0.1.0.0
license:             BSD3
author:              Jesse Hallett
maintainer:          jesse@sitr.us
-- copyright:
-- category:
build-type:          Simple
cabal-version:       >=1.10

executable my-xmonad
  main-is:             xmonad.hs
  -- other-modules lists custom modules in my .xmonad/lib/ directory
  build-depends:       base
                     , containers
                     , data-default
                     , monoid-subclasses
                     , mtl
                     , process
                     , unix
                     , utf8-string
                     , X11 >= 1.10
                     , xmonad
                     , xmonad-contrib
                     , dbus
                     , text
                     , time
                     , directory
                     , filepath
  hs-source-dirs:      lib
  default-language:    Haskell2010
  ghc-options:         -Wall -Werror -threaded
